// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`theme palette generation > generates a stable palette for #000000 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#fdedef",
    "#22191b",
  ],
  "inversePrimary": [
    "#ffb1c8",
    "#984061",
  ],
  "inverseSurface": [
    "#372e30",
    "#efdfe1",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#5e1133",
  ],
  "onPrimaryContainer": [
    "#3e001d",
    "#ffd9e2",
  ],
  "onSecondary": [
    "#ffffff",
    "#422931",
  ],
  "onSecondaryContainer": [
    "#2b151c",
    "#ffd9e2",
  ],
  "onSurface": [
    "#22191b",
    "#efdfe1",
  ],
  "onSurfaceVariant": [
    "#514347",
    "#d5c2c6",
  ],
  "onTertiary": [
    "#ffffff",
    "#48290b",
  ],
  "onTertiaryContainer": [
    "#2e1500",
    "#ffdcc1",
  ],
  "outline": [
    "#837377",
    "#9e8c90",
  ],
  "outlineVariant": [
    "#d5c2c6",
    "#514347",
  ],
  "primary": [
    "#984061",
    "#ffb1c8",
  ],
  "primaryContainer": [
    "#ffd9e2",
    "#7b2949",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#74565f",
    "#e3bdc6",
  ],
  "secondaryContainer": [
    "#ffd9e2",
    "#5a3f47",
  ],
  "secondaryContainerVariant": [
    "#d4afb9",
    "#361f26",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#fff8f8",
    "#22191b",
  ],
  "surfaceBright": [
    "#fff8f8",
    "#413739",
  ],
  "surfaceContainer": [
    "#faeaed",
    "#261d20",
  ],
  "surfaceContainerHigh": [
    "#f5e4e7",
    "#31282a",
  ],
  "surfaceContainerHighest": [
    "#efdfe1",
    "#3c3235",
  ],
  "surfaceContainerLow": [
    "#fff0f2",
    "#22191b",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#140c0e",
  ],
  "surfaceDim": [
    "#e6d6d9",
    "#191113",
  ],
  "surfaceVariant": [
    "#f2dde1",
    "#514347",
  ],
  "tertiary": [
    "#7c5635",
    "#efbd94",
  ],
  "tertiaryContainer": [
    "#ffdcc1",
    "#613f20",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #0000ff 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#f2eff7",
    "#1b1b21",
  ],
  "inversePrimary": [
    "#bec2ff",
    "#333dff",
  ],
  "inverseSurface": [
    "#303036",
    "#e4e1e9",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#0001ac",
  ],
  "onPrimaryContainer": [
    "#00006e",
    "#e0e0ff",
  ],
  "onSecondary": [
    "#ffffff",
    "#2e2f42",
  ],
  "onSecondaryContainer": [
    "#191a2c",
    "#e1e0f9",
  ],
  "onSurface": [
    "#1b1b21",
    "#e4e1e9",
  ],
  "onSurfaceVariant": [
    "#46464f",
    "#c7c5d0",
  ],
  "onTertiary": [
    "#ffffff",
    "#46263b",
  ],
  "onTertiaryContainer": [
    "#2e1126",
    "#ffd8ee",
  ],
  "outline": [
    "#777680",
    "#91909a",
  ],
  "outlineVariant": [
    "#c7c5d0",
    "#46464f",
  ],
  "primary": [
    "#333dff",
    "#bec2ff",
  ],
  "primaryContainer": [
    "#e0e0ff",
    "#0000ef",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#5c5d72",
    "#c5c4dd",
  ],
  "secondaryContainer": [
    "#e1e0f9",
    "#444559",
  ],
  "secondaryContainerVariant": [
    "#b7b7cf",
    "#232437",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#fbf8ff",
    "#1b1b21",
  ],
  "surfaceBright": [
    "#fbf8ff",
    "#39393f",
  ],
  "surfaceContainer": [
    "#f0ecf4",
    "#1f1f25",
  ],
  "surfaceContainerHigh": [
    "#eae7ef",
    "#2a292f",
  ],
  "surfaceContainerHighest": [
    "#e4e1e9",
    "#34343a",
  ],
  "surfaceContainerLow": [
    "#f5f2fa",
    "#1b1b21",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#0e0e13",
  ],
  "surfaceDim": [
    "#dbd9e0",
    "#131318",
  ],
  "surfaceVariant": [
    "#e4e1ec",
    "#46464f",
  ],
  "tertiary": [
    "#78536b",
    "#e8b9d5",
  ],
  "tertiaryContainer": [
    "#ffd8ee",
    "#5e3c52",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #00ff00 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#eff2e8",
    "#191d17",
  ],
  "inversePrimary": [
    "#02e600",
    "#026e00",
  ],
  "inverseSurface": [
    "#2e322b",
    "#e1e4da",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#013a00",
  ],
  "onPrimaryContainer": [
    "#002200",
    "#77ff61",
  ],
  "onSecondary": [
    "#ffffff",
    "#263422",
  ],
  "onSecondaryContainer": [
    "#121f0e",
    "#d7e8cd",
  ],
  "onSurface": [
    "#191d17",
    "#e1e4da",
  ],
  "onSurfaceVariant": [
    "#43483f",
    "#c3c8bc",
  ],
  "onTertiary": [
    "#ffffff",
    "#003739",
  ],
  "onTertiaryContainer": [
    "#002022",
    "#bcebee",
  ],
  "outline": [
    "#73796e",
    "#8d9387",
  ],
  "outlineVariant": [
    "#c3c8bc",
    "#43483f",
  ],
  "primary": [
    "#026e00",
    "#02e600",
  ],
  "primaryContainer": [
    "#77ff61",
    "#015300",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#54634d",
    "#bbcbb2",
  ],
  "secondaryContainer": [
    "#d7e8cd",
    "#3c4b37",
  ],
  "secondaryContainerVariant": [
    "#adbea4",
    "#1c2918",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#f8fbf1",
    "#191d17",
  ],
  "surfaceBright": [
    "#f8fbf1",
    "#363a34",
  ],
  "surfaceContainer": [
    "#ecefe5",
    "#1d211b",
  ],
  "surfaceContainerHigh": [
    "#e6e9e0",
    "#272b25",
  ],
  "surfaceContainerHighest": [
    "#e1e4da",
    "#32362f",
  ],
  "surfaceContainerLow": [
    "#f2f5eb",
    "#191d17",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#0b0f0a",
  ],
  "surfaceDim": [
    "#d8dbd2",
    "#11140f",
  ],
  "surfaceVariant": [
    "#dfe4d7",
    "#43483f",
  ],
  "tertiary": [
    "#386568",
    "#a0cfd2",
  ],
  "tertiaryContainer": [
    "#bcebee",
    "#1e4d50",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #00ffff 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#ecf2f1",
    "#161d1d",
  ],
  "inversePrimary": [
    "#00dddd",
    "#006a6a",
  ],
  "inverseSurface": [
    "#2b3231",
    "#dde4e3",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#003737",
  ],
  "onPrimaryContainer": [
    "#002020",
    "#00fcfc",
  ],
  "onSecondary": [
    "#ffffff",
    "#1b3534",
  ],
  "onSecondaryContainer": [
    "#051f1f",
    "#cce8e7",
  ],
  "onSurface": [
    "#161d1d",
    "#dde4e3",
  ],
  "onSurfaceVariant": [
    "#3f4948",
    "#bec9c8",
  ],
  "onTertiary": [
    "#ffffff",
    "#1c314b",
  ],
  "onTertiaryContainer": [
    "#041c35",
    "#d3e4ff",
  ],
  "outline": [
    "#6f7978",
    "#889392",
  ],
  "outlineVariant": [
    "#bec9c8",
    "#3f4948",
  ],
  "primary": [
    "#006a6a",
    "#00dddd",
  ],
  "primaryContainer": [
    "#00fcfc",
    "#00504f",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#4a6363",
    "#b0cccb",
  ],
  "secondaryContainer": [
    "#cce8e7",
    "#324b4b",
  ],
  "secondaryContainerVariant": [
    "#a3bebd",
    "#102a2a",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#f4fbfa",
    "#161d1d",
  ],
  "surfaceBright": [
    "#f4fbfa",
    "#343a3a",
  ],
  "surfaceContainer": [
    "#e9efee",
    "#1a2121",
  ],
  "surfaceContainerHigh": [
    "#e3e9e9",
    "#252b2b",
  ],
  "surfaceContainerHighest": [
    "#dde4e3",
    "#2f3636",
  ],
  "surfaceContainerLow": [
    "#eff5f4",
    "#161d1d",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#090f0f",
  ],
  "surfaceDim": [
    "#d5dbda",
    "#0e1414",
  ],
  "surfaceVariant": [
    "#dae5e4",
    "#3f4948",
  ],
  "tertiary": [
    "#4b607c",
    "#b3c8e8",
  ],
  "tertiaryContainer": [
    "#d3e4ff",
    "#334863",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #0b57d0 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#f1f0f7",
    "#1a1b20",
  ],
  "inversePrimary": [
    "#b2c5ff",
    "#0856cf",
  ],
  "inverseSurface": [
    "#2f3036",
    "#e2e2e9",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#002b72",
  ],
  "onPrimaryContainer": [
    "#001847",
    "#dae2ff",
  ],
  "onSecondary": [
    "#ffffff",
    "#2a3042",
  ],
  "onSecondaryContainer": [
    "#151b2c",
    "#dce2f9",
  ],
  "onSurface": [
    "#1a1b20",
    "#e2e2e9",
  ],
  "onSurfaceVariant": [
    "#45464f",
    "#c5c6d0",
  ],
  "onTertiary": [
    "#ffffff",
    "#412741",
  ],
  "onTertiaryContainer": [
    "#2b122b",
    "#fed7f9",
  ],
  "outline": [
    "#757780",
    "#8f9099",
  ],
  "outlineVariant": [
    "#c5c6d0",
    "#45464f",
  ],
  "primary": [
    "#0856cf",
    "#b2c5ff",
  ],
  "primaryContainer": [
    "#dae2ff",
    "#0040a1",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#585e71",
    "#c0c6dd",
  ],
  "secondaryContainer": [
    "#dce2f9",
    "#404659",
  ],
  "secondaryContainerVariant": [
    "#b2b8ce",
    "#1f2536",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#faf8ff",
    "#1a1b20",
  ],
  "surfaceBright": [
    "#faf8ff",
    "#38393f",
  ],
  "surfaceContainer": [
    "#eeedf4",
    "#1e1f25",
  ],
  "surfaceContainerHigh": [
    "#e8e7ef",
    "#282a2f",
  ],
  "surfaceContainerHighest": [
    "#e2e2e9",
    "#33343a",
  ],
  "surfaceContainerLow": [
    "#f4f3fa",
    "#1a1b20",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#0d0e13",
  ],
  "surfaceDim": [
    "#dad9e0",
    "#121318",
  ],
  "surfaceVariant": [
    "#e1e2ec",
    "#45464f",
  ],
  "tertiary": [
    "#735471",
    "#e1bbdd",
  ],
  "tertiaryContainer": [
    "#fed7f9",
    "#5a3d59",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #6750a4 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#f5eff7",
    "#1d1b20",
  ],
  "inversePrimary": [
    "#cfbcff",
    "#6750a4",
  ],
  "inverseSurface": [
    "#322f35",
    "#e6e0e9",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#381e72",
  ],
  "onPrimaryContainer": [
    "#22005d",
    "#e9ddff",
  ],
  "onSecondary": [
    "#ffffff",
    "#332d41",
  ],
  "onSecondaryContainer": [
    "#1e192b",
    "#e8def8",
  ],
  "onSurface": [
    "#1d1b20",
    "#e6e0e9",
  ],
  "onSurfaceVariant": [
    "#49454e",
    "#cac4cf",
  ],
  "onTertiary": [
    "#ffffff",
    "#4a2532",
  ],
  "onTertiaryContainer": [
    "#31101d",
    "#ffd9e3",
  ],
  "outline": [
    "#7a757f",
    "#948f99",
  ],
  "outlineVariant": [
    "#cac4cf",
    "#49454e",
  ],
  "primary": [
    "#6750a4",
    "#cfbcff",
  ],
  "primaryContainer": [
    "#e9ddff",
    "#4f378a",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#625b71",
    "#cbc2db",
  ],
  "secondaryContainer": [
    "#e8def8",
    "#4a4458",
  ],
  "secondaryContainerVariant": [
    "#beb5cd",
    "#282336",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#fdf7ff",
    "#1d1b20",
  ],
  "surfaceBright": [
    "#fdf7ff",
    "#3b383e",
  ],
  "surfaceContainer": [
    "#f2ecf4",
    "#211f24",
  ],
  "surfaceContainerHigh": [
    "#ece6ee",
    "#2b292f",
  ],
  "surfaceContainerHighest": [
    "#e6e0e9",
    "#36343a",
  ],
  "surfaceContainerLow": [
    "#f8f2fa",
    "#1d1b20",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#0f0d13",
  ],
  "surfaceDim": [
    "#ded8e0",
    "#141218",
  ],
  "surfaceVariant": [
    "#e7e0eb",
    "#49454e",
  ],
  "tertiary": [
    "#7e5260",
    "#efb8c8",
  ],
  "tertiaryContainer": [
    "#ffd9e3",
    "#633b48",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #808080 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#ecf2f3",
    "#171d1e",
  ],
  "inversePrimary": [
    "#4fd8eb",
    "#006874",
  ],
  "inverseSurface": [
    "#2b3133",
    "#dee3e5",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#00363d",
  ],
  "onPrimaryContainer": [
    "#001f24",
    "#97f0ff",
  ],
  "onSecondary": [
    "#ffffff",
    "#1c3438",
  ],
  "onSecondaryContainer": [
    "#051f23",
    "#cde7ec",
  ],
  "onSurface": [
    "#171d1e",
    "#dee3e5",
  ],
  "onSurfaceVariant": [
    "#3f484a",
    "#bfc8ca",
  ],
  "onTertiary": [
    "#ffffff",
    "#24304d",
  ],
  "onTertiaryContainer": [
    "#0e1a37",
    "#dae2ff",
  ],
  "outline": [
    "#6f797a",
    "#899294",
  ],
  "outlineVariant": [
    "#bfc8ca",
    "#3f484a",
  ],
  "primary": [
    "#006874",
    "#4fd8eb",
  ],
  "primaryContainer": [
    "#97f0ff",
    "#004f58",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#4a6267",
    "#b1cbd0",
  ],
  "secondaryContainer": [
    "#cde7ec",
    "#334b4f",
  ],
  "secondaryContainerVariant": [
    "#a4bdc2",
    "#10292d",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#f5fafb",
    "#171d1e",
  ],
  "surfaceBright": [
    "#f5fafb",
    "#343a3b",
  ],
  "surfaceContainer": [
    "#e9eff0",
    "#1b2122",
  ],
  "surfaceContainerHigh": [
    "#e3e9ea",
    "#252b2c",
  ],
  "surfaceContainerHighest": [
    "#dee3e5",
    "#303637",
  ],
  "surfaceContainerLow": [
    "#eff5f6",
    "#171d1e",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#090f10",
  ],
  "surfaceDim": [
    "#d5dbdc",
    "#0e1415",
  ],
  "surfaceVariant": [
    "#dbe4e6",
    "#3f484a",
  ],
  "tertiary": [
    "#525e7d",
    "#bac6ea",
  ],
  "tertiaryContainer": [
    "#dae2ff",
    "#3b4664",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #cc9724 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#faefe2",
    "#201b13",
  ],
  "inversePrimary": [
    "#f7bd48",
    "#7c5800",
  ],
  "inverseSurface": [
    "#353027",
    "#ece1d4",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#412d00",
  ],
  "onPrimaryContainer": [
    "#271900",
    "#ffdea7",
  ],
  "onSecondary": [
    "#ffffff",
    "#3c2e15",
  ],
  "onSecondaryContainer": [
    "#251a04",
    "#f7dfbb",
  ],
  "onSurface": [
    "#201b13",
    "#ece1d4",
  ],
  "onSurfaceVariant": [
    "#4e4639",
    "#d1c5b4",
  ],
  "onTertiary": [
    "#ffffff",
    "#1f361a",
  ],
  "onTertiaryContainer": [
    "#0b2007",
    "#ceebc1",
  ],
  "outline": [
    "#807667",
    "#9a8f80",
  ],
  "outlineVariant": [
    "#d1c5b4",
    "#4e4639",
  ],
  "primary": [
    "#7c5800",
    "#f7bd48",
  ],
  "primaryContainer": [
    "#ffdea7",
    "#5e4200",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#6d5c3f",
    "#dac4a0",
  ],
  "secondaryContainer": [
    "#f7dfbb",
    "#54452a",
  ],
  "secondaryContainerVariant": [
    "#cbb694",
    "#30240c",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#fff8f3",
    "#201b13",
  ],
  "surfaceBright": [
    "#fff8f3",
    "#3e382f",
  ],
  "surfaceContainer": [
    "#f7ecdf",
    "#241f17",
  ],
  "surfaceContainerHigh": [
    "#f1e7d9",
    "#2f2921",
  ],
  "surfaceContainerHighest": [
    "#ece1d4",
    "#3a342b",
  ],
  "surfaceContainerLow": [
    "#fdf2e5",
    "#201b13",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#120e07",
  ],
  "surfaceDim": [
    "#e3d8cc",
    "#17130b",
  ],
  "surfaceVariant": [
    "#eee1cf",
    "#4e4639",
  ],
  "tertiary": [
    "#4c6544",
    "#b3cea6",
  ],
  "tertiaryContainer": [
    "#ceebc1",
    "#354d2e",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #ff0000 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#ffedea",
    "#231918",
  ],
  "inversePrimary": [
    "#ffb4a8",
    "#c00100",
  ],
  "inverseSurface": [
    "#392e2c",
    "#f1dfdc",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#690100",
  ],
  "onPrimaryContainer": [
    "#410000",
    "#ffdad4",
  ],
  "onSecondary": [
    "#ffffff",
    "#442925",
  ],
  "onSecondaryContainer": [
    "#2c1511",
    "#ffdad4",
  ],
  "onSurface": [
    "#231918",
    "#f1dfdc",
  ],
  "onSurfaceVariant": [
    "#534341",
    "#d8c2be",
  ],
  "onTertiary": [
    "#ffffff",
    "#3e2e04",
  ],
  "onTertiaryContainer": [
    "#251a00",
    "#fbdfa6",
  ],
  "outline": [
    "#857370",
    "#a08c89",
  ],
  "outlineVariant": [
    "#d8c2be",
    "#534341",
  ],
  "primary": [
    "#c00100",
    "#ffb4a8",
  ],
  "primaryContainer": [
    "#ffdad4",
    "#930100",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#775651",
    "#e7bdb6",
  ],
  "secondaryContainer": [
    "#ffdad4",
    "#5d3f3b",
  ],
  "secondaryContainerVariant": [
    "#d8afa9",
    "#381f1b",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#fff8f6",
    "#231918",
  ],
  "surfaceBright": [
    "#fff8f6",
    "#423735",
  ],
  "surfaceContainer": [
    "#fceae7",
    "#271d1c",
  ],
  "surfaceContainerHigh": [
    "#f7e4e1",
    "#322826",
  ],
  "surfaceContainerHighest": [
    "#f1dfdc",
    "#3d3230",
  ],
  "surfaceContainerLow": [
    "#fff0ee",
    "#231918",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#140c0b",
  ],
  "surfaceDim": [
    "#e8d6d3",
    "#1a1110",
  ],
  "surfaceVariant": [
    "#f5ddda",
    "#534341",
  ],
  "tertiary": [
    "#705c2e",
    "#dec48c",
  ],
  "tertiaryContainer": [
    "#fbdfa6",
    "#564419",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #ff00ff 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#faedf4",
    "#201a1e",
  ],
  "inversePrimary": [
    "#ffabf3",
    "#a900a9",
  ],
  "inverseSurface": [
    "#352e33",
    "#ecdfe5",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#5b005b",
  ],
  "onPrimaryContainer": [
    "#380038",
    "#ffd7f5",
  ],
  "onSecondary": [
    "#ffffff",
    "#3d2b3a",
  ],
  "onSecondaryContainer": [
    "#271624",
    "#f7daef",
  ],
  "onSurface": [
    "#201a1e",
    "#ecdfe5",
  ],
  "onSurfaceVariant": [
    "#4e444b",
    "#d1c2cb",
  ],
  "onTertiary": [
    "#ffffff",
    "#4c261b",
  ],
  "onTertiaryContainer": [
    "#321208",
    "#ffdbd1",
  ],
  "outline": [
    "#80747b",
    "#9a8d95",
  ],
  "outlineVariant": [
    "#d1c2cb",
    "#4e444b",
  ],
  "primary": [
    "#a900a9",
    "#ffabf3",
  ],
  "primaryContainer": [
    "#ffd7f5",
    "#810081",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#6e5869",
    "#dabfd2",
  ],
  "secondaryContainer": [
    "#f7daef",
    "#554151",
  ],
  "secondaryContainerVariant": [
    "#ccb1c4",
    "#32202f",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#fff7f9",
    "#201a1e",
  ],
  "surfaceBright": [
    "#fff7f9",
    "#3e373c",
  ],
  "surfaceContainer": [
    "#f7eaf1",
    "#241e22",
  ],
  "surfaceContainerHigh": [
    "#f1e5eb",
    "#2f282d",
  ],
  "surfaceContainerHighest": [
    "#ecdfe5",
    "#3a3338",
  ],
  "surfaceContainerLow": [
    "#fdf0f7",
    "#201a1e",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#120d11",
  ],
  "surfaceDim": [
    "#e3d7dd",
    "#171216",
  ],
  "surfaceVariant": [
    "#eedee7",
    "#4e444b",
  ],
  "tertiary": [
    "#815345",
    "#f5b8a7",
  ],
  "tertiaryContainer": [
    "#ffdbd1",
    "#663c2f",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #ff6d00 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#ffede6",
    "#221a16",
  ],
  "inversePrimary": [
    "#ffb692",
    "#9f4100",
  ],
  "inverseSurface": [
    "#382e2a",
    "#f0dfd8",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#562000",
  ],
  "onPrimaryContainer": [
    "#341100",
    "#ffdbcb",
  ],
  "onSecondary": [
    "#ffffff",
    "#432a1e",
  ],
  "onSecondaryContainer": [
    "#2c160b",
    "#ffdbcb",
  ],
  "onSurface": [
    "#221a16",
    "#f0dfd8",
  ],
  "onSurfaceVariant": [
    "#52443d",
    "#d7c2b9",
  ],
  "onTertiary": [
    "#ffffff",
    "#353107",
  ],
  "onTertiaryContainer": [
    "#1f1c00",
    "#ede4aa",
  ],
  "outline": [
    "#85736c",
    "#a08d85",
  ],
  "outlineVariant": [
    "#d7c2b9",
    "#52443d",
  ],
  "primary": [
    "#9f4100",
    "#ffb692",
  ],
  "primaryContainer": [
    "#ffdbcb",
    "#7a3000",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#765849",
    "#e6beac",
  ],
  "secondaryContainer": [
    "#ffdbcb",
    "#5c4033",
  ],
  "secondaryContainerVariant": [
    "#d7b19f",
    "#372014",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#fff8f6",
    "#221a16",
  ],
  "surfaceBright": [
    "#fff8f6",
    "#423732",
  ],
  "surfaceContainer": [
    "#fceae3",
    "#271e19",
  ],
  "surfaceContainerHigh": [
    "#f6e5de",
    "#322824",
  ],
  "surfaceContainerHighest": [
    "#f0dfd8",
    "#3d332e",
  ],
  "surfaceContainerLow": [
    "#fff1eb",
    "#221a16",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#140c09",
  ],
  "surfaceDim": [
    "#e8d7d0",
    "#1a120e",
  ],
  "surfaceVariant": [
    "#f4ded5",
    "#52443d",
  ],
  "tertiary": [
    "#655f31",
    "#d0c890",
  ],
  "tertiaryContainer": [
    "#ede4aa",
    "#4d481c",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #ffff00 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#f4f1e3",
    "#1c1c14",
  ],
  "inversePrimary": [
    "#cdcd00",
    "#626200",
  ],
  "inverseSurface": [
    "#313128",
    "#e6e3d5",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#323200",
  ],
  "onPrimaryContainer": [
    "#1d1d00",
    "#eaea00",
  ],
  "onSecondary": [
    "#ffffff",
    "#323218",
  ],
  "onSecondaryContainer": [
    "#1d1d06",
    "#e7e4bf",
  ],
  "onSurface": [
    "#1c1c14",
    "#e6e3d5",
  ],
  "onSurfaceVariant": [
    "#48473a",
    "#cac7b6",
  ],
  "onTertiary": [
    "#ffffff",
    "#0b372a",
  ],
  "onTertiaryContainer": [
    "#002117",
    "#bfecd8",
  ],
  "outline": [
    "#797869",
    "#939182",
  ],
  "outlineVariant": [
    "#cac7b6",
    "#48473a",
  ],
  "primary": [
    "#626200",
    "#cdcd00",
  ],
  "primaryContainer": [
    "#eaea00",
    "#494900",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#606043",
    "#cac8a5",
  ],
  "secondaryContainer": [
    "#e7e4bf",
    "#49482d",
  ],
  "secondaryContainerVariant": [
    "#bcba97",
    "#27270f",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#fdf9ec",
    "#1c1c14",
  ],
  "surfaceBright": [
    "#fdf9ec",
    "#3a3a30",
  ],
  "surfaceContainer": [
    "#f1eee0",
    "#202018",
  ],
  "surfaceContainerHigh": [
    "#ece8db",
    "#2b2a22",
  ],
  "surfaceContainerHighest": [
    "#e6e3d5",
    "#36352c",
  ],
  "surfaceContainerLow": [
    "#f7f4e6",
    "#1c1c14",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#0f0f07",
  ],
  "surfaceDim": [
    "#dddacd",
    "#14140c",
  ],
  "surfaceVariant": [
    "#e6e3d1",
    "#48473a",
  ],
  "tertiary": [
    "#3d6657",
    "#a4d0bd",
  ],
  "tertiaryContainer": [
    "#bfecd8",
    "#254e40",
  ],
}
`;

exports[`theme palette generation > generates a stable palette for #ffffff 1`] = `
{
  "error": [
    "#ba1a1a",
    "#ffb4ab",
  ],
  "errorContainer": [
    "#ffdad6",
    "#93000a",
  ],
  "inverseOnSurface": [
    "#ecf2f3",
    "#171d1e",
  ],
  "inversePrimary": [
    "#4fd8eb",
    "#006874",
  ],
  "inverseSurface": [
    "#2b3133",
    "#dee3e5",
  ],
  "onError": [
    "#ffffff",
    "#690005",
  ],
  "onErrorContainer": [
    "#410002",
    "#ffdad6",
  ],
  "onPrimary": [
    "#ffffff",
    "#00363d",
  ],
  "onPrimaryContainer": [
    "#001f24",
    "#97f0ff",
  ],
  "onSecondary": [
    "#ffffff",
    "#1c3438",
  ],
  "onSecondaryContainer": [
    "#051f23",
    "#cde7ec",
  ],
  "onSurface": [
    "#171d1e",
    "#dee3e5",
  ],
  "onSurfaceVariant": [
    "#3f484a",
    "#bfc8ca",
  ],
  "onTertiary": [
    "#ffffff",
    "#24304d",
  ],
  "onTertiaryContainer": [
    "#0e1a37",
    "#dae2ff",
  ],
  "outline": [
    "#6f797a",
    "#899294",
  ],
  "outlineVariant": [
    "#bfc8ca",
    "#3f484a",
  ],
  "primary": [
    "#006874",
    "#4fd8eb",
  ],
  "primaryContainer": [
    "#97f0ff",
    "#004f58",
  ],
  "scrim": [
    "#000000",
    "#000000",
  ],
  "secondary": [
    "#4a6267",
    "#b1cbd0",
  ],
  "secondaryContainer": [
    "#cde7ec",
    "#334b4f",
  ],
  "secondaryContainerVariant": [
    "#a4bdc2",
    "#10292d",
  ],
  "shadow": [
    "#000000",
    "#000000",
  ],
  "surface": [
    "#f5fafb",
    "#171d1e",
  ],
  "surfaceBright": [
    "#f5fafb",
    "#343a3b",
  ],
  "surfaceContainer": [
    "#e9eff0",
    "#1b2122",
  ],
  "surfaceContainerHigh": [
    "#e3e9ea",
    "#252b2c",
  ],
  "surfaceContainerHighest": [
    "#dee3e5",
    "#303637",
  ],
  "surfaceContainerLow": [
    "#eff5f6",
    "#171d1e",
  ],
  "surfaceContainerLowest": [
    "#ffffff",
    "#090f10",
  ],
  "surfaceDim": [
    "#d5dbdc",
    "#0e1415",
  ],
  "surfaceVariant": [
    "#dbe4e6",
    "#3f484a",
  ],
  "tertiary": [
    "#525e7d",
    "#bac6ea",
  ],
  "tertiaryContainer": [
    "#dae2ff",
    "#3b4664",
  ],
}
`;
